Fixed bug with z-index

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -37,11 +37,13 @@ body{
   display: block;
   pointer-events: none;
   transition: opacity .2s;
+  z-index: 0;
 }
 
 .screen.active{
   pointer-events: auto;
   opacity: 1;
+  z-index: 1;
 }
 
 
